<resources>
    <string name="app_name">Let Tutor</string>

    <!--AUTH-->
    <string name="type_email">Type email here…</string>
    <string name="type_password">Type password here…</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="not_a_member">Not a member yet!</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="login_facebook">Login with Facebook</string>
    <string name="login_google">Login with Google</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="already_have_account">Already have account!</string>

    <!--HOME-->
    <string name="home_screen">Home</string>
    <string name="upcoming_lesson">Upcoming Lesson</string>
    <string name="enter_a_room">Enter a room</string>
    <string name="specialties">Specialties</string>
    <string name="booking">Booking</string>
    <string name="languages">Languages</string>
    <string name="interests">Interests</string>
    <string name="rate_and_comment">Rate and comment</string>

    <!--COURSE-->
    <string name="course_screen">Course</string>

    <!--TUTOR-->
    <string name="tutor_screen">Tutor</string>
    <string name="tutor_name">Tutor name</string>
    <string name="tutor_profession">Tutor profession</string>
    <string name="tutor_country">Tutor country</string>
    <string name="comment">Comment</string>

    <!--UPCOMING-->
    <string name="upcoming_screen">Upcoming</string>

    <!--SETTING-->
    <string name="setting_screen">Setting</string>
</resources>