<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_screen"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home_screen" />

    <item
        android:id="@+id/course_screen"
        android:enabled="true"
        android:icon="@drawable/course_screen"
        android:title="@string/course_screen" />

    <item
        android:id="@+id/tutor_screen"
        android:enabled="true"
        android:icon="@drawable/tutor_screen"
        android:title="@string/tutor_screen" />

    <item
        android:id="@+id/upcoming_screen"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_calendar_today_24"
        android:title="@string/upcoming_screen" />

    <item
        android:id="@+id/setting_screen"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/setting_screen" />

</menu>